--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Demo</title>
 </head>
+
 <body>
-    <h1>hello</h1>
-    <p>new feature added!</p>
-    <p>hello world!</p>
-    <p>there</p>
+    <h1>Welcome</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus itaque quasi ullam ut voluptas aut
+        dignissimos officia aliquam nisi? Sunt doloribus pariatur laudantium consectetur, tempore consequatur expedita
+        sit veritatis velit.</p>
 </body>
+
 </html>
